--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "chai-check-struct",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "port of check-structure to chai",
 	"main": "index.js",
+	"types": "./types/index.d.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -12,7 +13,6 @@
 	},
 	"author": "drafolin",
 	"license": "ISC",
-	"types": "index.d.ts",
 	"keywords": [
 		"chai",
 		"check",
